chore: apply pending OpenRewrite modernizations (#204)
## Summary

Cluster I of the project-analysis fix series (findings catalog:
`doc/analysis-findings.md`, ID REW-1) — the output of the pre-commit
profile's OpenRewrite run, which previously left the working tree dirty
on every `./mvnw -Ppre-commit clean verify` invocation:

- `Collections.emptyList()/emptyMap()/emptySet()` →
`List.of()/Map.of()/Set.of()` across main sources
- if-else-if chain → `switch` in `Joiner`
- JUnit 5 test cleanups (`SimplifyTestThrows`) across test sources
- `jakarta.annotation-api` scope back to `provided`: the pre-commit
tooling itself enforces this scope, superseding the manual `test` scope
from the docs/build PR (#196) — keeping `test` would leave the tree
perpetually dirty for anyone running pre-commit

No hand-written changes; everything in this PR is generated by the
project's own `-Ppre-commit` profile on top of current main.

## Test plan

- `./mvnw clean install` — BUILD SUCCESS, full suite green
- `./mvnw -Ppre-commit clean verify -DskipTests` — leaves a clean
working tree afterwards

🤖 Generated with [Claude Code](https://claude.com/claude-code)

https://claude.ai/code/session_01NKzn4Upj33uRFvWQep3UzE

---
_Generated by [Claude
Code](https://claude.ai/code/session_01NKzn4Upj33uRFvWQep3UzE)_

Co-authored-by: Claude <noreply@anthropic.com>